# logic

./: .gitignore  LICENSE  Makefile  Partial.hs  Prop.hs  README.md  ast.ml  ast.mli  examples.ml  formula.ml  formula.mli  lexer.mll  logic.cabal  main.ml  package.yaml  parser.ml  parser.mly  parser2.ml  partial.ml  partial.mli  ppx_qq.ml  util.ml  util.mli  valuation.ml  valuation.mli
app/: Main.hs
old/: .gitignore  Makefile  main.ml  partial.ml  util.mli  valuation.ml
old/ppx_qq/: ppx_qq.ml
old_parser/: ast.ml
ppx_qq/: .gitignore  Makefile
src/: Expr.hs  Prop.hs
