name:                logic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ghulette/arqos#readme
license:             BSD3
license-file:        LICENSE
author:              Geoff Hulette
maintainer:          geoff@hulette.net
copyright:           GCH
category:            Logic
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Prop
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5.7.1,
                       text >= 1.2.2.2
  default-language:    Haskell2010

executable arqos
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       logic
                     , base
                     , containers >= 0.5.7.1
                     , text >= 1.2.2.2
  default-language:    Haskell2010

test-suite arqos-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       logic
                     , base
                     , containers >= 0.5.7.1
                     , text >= 1.2.2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ghulette/arqos
